<resources>
    <string name="app_name">BlogApp</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">User Email</string>
    <string name="nav_header_phone">User Phone</string>
    <string name="nav_header_Add">User Add</string>
    <string name="nav_header_blood">Blood Group</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_new_user_here">Register New User Here</string>
</resources>
